Prototyping UI and updating API

--- a/restful-practice/public/manifest.json
+++ b/restful-practice/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "public",
-  "short_name": "public",
+  "name": "my-app",
+  "short_name": "my-app",
   "start_url": "/",
   "display": "standalone"
 }
