--- a/restful-practice/public/bower.json
+++ b/restful-practice/public/bower.json
@@ -1,13 +1,17 @@
 {
-  "name": "public",
+  "name": "my-app",
   "main": "index.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "iron-ajax": "polymerelements/iron-ajax#^2.0.2",
+    "app-layout": "PolymerElements/app-layout#^2.0.0",
+    "paper-card": "PolymerElements/paper-card#^2.0.0",
+    "iron-icons": "PolymerElements/iron-icons#^2.0.1",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
+    "paper-button": "PolymerElements/paper-button#^2.0.0"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
-    "web-component-tester": "^4.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
+    "web-component-tester": "Polymer/web-component-tester#^6.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0"
   }
 }
