--- a/public/bower.json
+++ b/public/bower.json
@@ -8,7 +8,9 @@
     "paper-card": "PolymerElements/paper-card#^2.0.0",
     "iron-icons": "PolymerElements/iron-icons#^2.0.1",
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
-    "paper-button": "PolymerElements/paper-button#^2.0.0"
+    "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "iron-pages": "PolymerElements/iron-pages#^2.0.0",
+    "app-route": "PolymerElements/app-route#^2.0.2"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
