--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
-    "express": "*",
     "body-parser": "*",
-    "mongoose": "*"
+    "express": "*",
+    "mongoose": "*",
+    "mongoose-paginate": "^5.0.3"
   },
   "author": "",
   "license": "ISC",
