--- a/public/bower.json
+++ b/public/bower.json
@@ -10,7 +10,8 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
     "paper-button": "PolymerElements/paper-button#^2.0.0",
     "iron-pages": "PolymerElements/iron-pages#^2.0.0",
-    "app-route": "PolymerElements/app-route#^2.0.2"
+    "app-route": "PolymerElements/app-route#^2.0.2",
+    "paper-input": "PolymerElements/paper-input#^2.0.2"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
