--- a/public/bower.json
+++ b/public/bower.json
@@ -11,7 +11,8 @@
     "paper-button": "PolymerElements/paper-button#^2.0.0",
     "iron-pages": "PolymerElements/iron-pages#^2.0.0",
     "app-route": "PolymerElements/app-route#^2.0.2",
-    "paper-input": "PolymerElements/paper-input#^2.0.2"
+    "paper-input": "PolymerElements/paper-input#^2.0.2",
+    "iron-list": "PolymerElements/iron-list#^2.0.8"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
